Reset this junk back to normal

--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,16 @@
   "name": "Work Day Forecast Totals",
   "version": "1.0",
   "description": "Returns forecast totals for work day",
-  "permissions": [
-    "activeTab",
-    "scripting"
-  ],
+  "permissions": ["activeTab"],  
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-   "content_scripts": [
+  "content_scripts": [
     {
-      "matches": ["https://www.myworkday.com/armaninollp/d/task/*"],
+      "matches": ["https://*.myworkday.com/*"],
       "js": ["content.js"]
     }
   ]
 }
-
-
